# qudi

./: .appveyor.yml  .gitignore  B_field_alinment_data_analysis.py  ConnectorGenerator.py  GatedCounter.py  NuclearOPs.py  TimeTaggerHandler.py  TimeTaggerHandler_Javid.py  TimeTaggerHandler_original.py  TimeTaggerHandler_simple.py  TransitionTracker.py  canbedeleted.py  data.csv  defcounter.py  environment_qudi.yml  ipython.html  multi_channel_awg_seq.py  own_fitlogic.py  pi3diamond_custom.py  power_calibration.csv
HighFinesse-Wavemeter-Client-main/: Cargo.toml  build.rs
HighFinesse-Wavemeter-Client-main/include/: wlmData.h
HighFinesse-Wavemeter-Client-main/lib/: README.MD  wlmData.lib
HighFinesse-Wavemeter-Client-main/src/: bindings.rs  error.rs  lib.rs
config/: Erik_Setup.cfg  Erik_Setup_2022_06_10.cfg  Erik_Setup_2022_07_11.cfg  Erik_Setup_for_automization.cfg  SIC_LT_Setup1.cfg  SIC_LT_Setup2.cfg  bathCryo.cfg  default_for_testing.cfg  default_for_testing_backup.cfg  default_for_testing_backup_22_04_15.cfg  default_for_testing_workingConfocal.cfg  mKCryo.cfg  rt_setup.cfg
core/: pi3_utils.py
gui/: colordefs.py
hardware/: USBNidaq6211.py  USBNidaq6211dummy.py  high_finesse_wavemeter copy.py  high_finesse_wavemeter.py  national_instruments_x_series copy.py  national_instruments_x_series.py  national_instruments_x_series_tt.py  ni_usb6211.py  timetagger_counter.py  toptica_laser_control.py  wavemeter_highfiness_switch.py
interface/: CTL_interface.py  cobolt_interface.py  cwave_interface.py  laser_power_interface.py  mcas_interface.py  test_interface.py  (+6 more)
(+1231 files in other folders)
