[package]
name = "wavemeter-client"
version = "0.3.0"
edition = "2021"

[lib]
name = "wavemeter"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version="0.14", features=["extension-module", "abi3-py36"] }

[build-dependencies]
bindgen = "0.59"